--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                     <input id="case-count1" class="inp-style inp-width" type="number" name="" value="0">
                 </div>
                 <div class="plus-minus-btn">
-                    <p> <span id="caseIncrease1">+</span> <span id="caseDecrease1">-</span> </p>
+                    <!-- <p> <span id="caseIncrease11"> + </span> <span id="caseDecrease12"> - </span> </p> -->
+                    <p> <span id="increase">+</span> <span id="decrease">-</span> </p>
                 </div>
             </div>
             <div class="calculations">
@@ -91,7 +92,7 @@
                         <h4>Total</h4>
                     </div>
                     <div class="right">
-                        <p id="totalAmount">$550</p>
+                        <p id="totalAmount">$00</p>
                     </div>
                 </div>
             </div>
